--- a/app/src/main/res/layout/cantico_item_layout.xml
+++ b/app/src/main/res/layout/cantico_item_layout.xml
@@ -17,6 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:textAlignment="center"
             android:layout_centerInParent="true"/>
     </RelativeLayout>
