--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,7 +73,8 @@
             android:text="@string/etiquetas_title"
             android:textSize="25sp"
             android:textAllCaps="false"
-            android:drawableStart="@drawable/ic_search"/>
+            android:drawableStart="@drawable/ic_search"
+            android:onClick="openEtiquetasSearch"/>
 
         <Button
             android:layout_columnWeight="1"
